# chunkedCompression

./: .gitignore  CLAUDE.md  EVALUATION_GUIDE.md  MODULE_DOCS.md  PROJECT_STRUCTURE.md  README.md  README_NEW.md  REFACTORING_SUMMARY.md  USAGE_GUIDE.md  compressed_autoregressive_decoder.py  compression.py  dataset.py  dataset_llama.py  debug_tensor_shapes.py  kv_cache.py  kv_cache_llama.py  llama_full_forward.py  llama_inference.py  llama_model_loader.py  main.py  model.py  profiles.py  profiles_llama.py  profiles_llama_new.py  pyproject.toml  requirements.txt  run_comprehensive_test.py  run_evaluation_benchmark.py  standard_kv_cache.py  test.py  test_imports.py  test_integration.py  test_real_llm.py  test_svd_logic.py  test_token_generation.py  utils.py
core/: __init__.py  _version.py
core/cache/: __init__.py  standard_kv_cache.py
core/compression/: __init__.py  compression_algorithms.py  legacy_wrapper.py  profile_builder.py
core/config/: __init__.py  compression_config.py  inference_config.py  model_config.py
core/data/: __init__.py  dataset_llama.py
core/evaluation/: __init__.py  benchmark_runner.py  dataset_handler.py  perplexity_evaluator.py  zero_shot_evaluator.py
core/inference/: __init__.py  compressed_autoregressive_decoder.py  llama_full_forward.py  llama_inference.py
core/interfaces/: __init__.py  cache_interface.py  compression_interface.py  data_interface.py  inference_interface.py  model_interface.py
core/model/: __init__.py  llama_loader.py  model_config_wrapper.py  model_loader.py
core/utils/: __init__.py  memory_manager.py
legacy/: __init__.py  profiles_llama.py
scripts/: README.md  benchmark.sh  check_gpu.sh  cleanup.sh  dev_setup.sh  monitor_resources.sh  run.sh  run_tests.sh  setup.sh  start_container.sh
tests/: __init__.py  kv_cache_comparison_results_20250611_074853.json  kv_cache_comparison_results_20250611_093657.json  llama_compression_test_results_20250611_065629.json  llama_compression_test_results_20250611_070536.json  llama_compression_test_results_20250611_071331.json  llama_compression_test_results_20250611_071738.json  llama_compression_test_results_20250611_072127.json  llama_compression_test_results_20250611_072837.json  llama_compression_test_results_20250611_073330.json  test_baseline_vs_compressed.py  test_integration.py  test_kv_cache_comparison.py  test_llama_compression.py  test_memory_safe_loading.py  test_real_kv_comparison.py
tests/integration/: __init__.py  run_comprehensive_test.py  test_refactored_imports.py  test_token_generation.py
tests/results/: kv_cache_comparison_results_20250611_092423.json  llama_compression_test_results_20250611_070140.json  llama_compression_test_results_20250611_074030.json  real_kv_cache_comparison_20250611_095212.json  real_kv_cache_comparison_20250611_095612.json
tests/unit/: __init__.py  test_baseline_vs_compressed.py  test_integration.py  test_kv_cache_comparison.py  test_llama_compression.py  test_memory_safe_loading.py  test_real_kv_comparison.py
